--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "slick-carousel": "^1.8.1"
   },
   "dependencies": {
-    "gulp-rename": "^1.4.0"
+    "gulp-rename": "^1.4.0",
+    "rateyo": "^2.3.5"
   },
   "description": ""
 }
